Update UPPCL logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- UPPCL Header -->
     <div class="header-box">
-        <img src="Uppcl-logo.png" alt="UPPCL Logo" class="uppcl-logo">
+        <img src="Uppcl-logo 12.png" alt="UPPCL Logo" class="uppcl-logo">
         <span class="tag">UPPCL • Electricity Billing</span>
     </div>
 
@@ -59,3 +59,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
