Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -36,21 +35,19 @@
         </div>
     </header>
 
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-links">
-                <button class="nav-link active" data-tab="home">Home</button>
-                <button class="nav-link" data-tab="pay-bill">Pay Bill</button>
-                <button class="nav-link" data-tab="new-connection">New Connection</button>
-                <button class="nav-link" data-tab="complaints">Complaints</button>
-                <button class="nav-link" data-tab="services">Services</button>
-                <button class="nav-link" data-tab="contact">Contact</button>
+                <button class="nav-link active">Home</button>
+                <button class="nav-link">Pay Bill</button>
+                <button class="nav-link">New Connection</button>
+                <button class="nav-link">Complaints</button>
+                <button class="nav-link">Services</button>
+                <button class="nav-link">Contact</button>
             </div>
         </div>
     </nav>
 
-    <!-- Alert Banner -->
     <div class="alert-banner">
         <div class="container">
             <div class="alert-content">
@@ -65,9 +62,7 @@
 
     <div class="container main-container">
         <div class="layout">
-            <!-- Main Content -->
             <div class="main-content">
-                <!-- Bill Check Section -->
                 <div class="card bill-check">
                     <h2>Quick Bill Check & Payment</h2>
                     <div class="bill-input-group">
@@ -81,7 +76,6 @@
                         </button>
                     </div>
 
-                    <!-- Bill Details (Hidden by default) -->
                     <div id="billDetails" class="bill-details" style="display: none;">
                         <div class="bill-header">
                             <div>
@@ -126,7 +120,6 @@
                     </div>
                 </div>
 
-                <!-- Services Grid -->
                 <div class="services-grid">
                     <div class="service-card">
                         <div class="service-icon">
@@ -151,7 +144,6 @@
                                 <polyline points="14 2 14 8 20 8"></polyline>
                                 <line x1="16" y1="13" x2="8" y2="13"></line>
                                 <line x1="16" y1="17" x2="8" y2="17"></line>
-                                <polyline points="10 9 9 9 8 9"></polyline>
                             </svg>
                         </div>
                         <div class="service-info">
@@ -194,7 +186,6 @@
                     </div>
                 </div>
 
-                <!-- Updates Section -->
                 <div class="card updates-section">
                     <h3 class="section-title">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -229,9 +220,7 @@
                 </div>
             </div>
 
-            <!-- Sidebar -->
             <div class="sidebar">
-                <!-- Quick Links -->
                 <div class="card quick-links">
                     <h3>Quick Links</h3>
                     <div class="links-list">
@@ -286,7 +275,6 @@
                     </div>
                 </div>
 
-                <!-- Contact Card -->
                 <div class="card contact-card">
                     <h3>24/7 Helpline</h3>
                     <div class="contact-info">
@@ -313,7 +301,6 @@
                     </div>
                 </div>
 
-                <!-- Stats Card -->
                 <div class="card stats-card">
                     <h3>Our Reach</h3>
                     <div class="stats-list">
@@ -335,7 +322,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
